# Wolfgang

./: DOCUMENTATION.docx  README.md
WolfgangDAW/WolfgangEditor/: CMakeLists.txt  Main.cpp  Main.h
